# tron1-rl-mjlab-yao

./: .gitignore  README.md  pyproject.toml
rsl_rl/rsl_rl/utils/: utils.py
scripts/rsl_rl/: play.py  train.py
src/tron1_rl_mjlab/: __init__.py
src/tron1_rl_mjlab/assets/wf_tron/: wf_tron.py
src/tron1_rl_mjlab/assets/wf_tron/xml/: robot.xml
src/tron1_rl_mjlab/tasks/cfg/: terrain_cfg.py  wf_tron_env_cfg.py  wf_tron_rl_cfg.py
src/tron1_rl_mjlab/tasks/mdp/: __init__.py  actions.py  commands.py  curriculums.py  events.py  observations.py  rewards.py  terminations.py
tron1-rl-mjlab/tasks/: __init__.py
tron1-rl-mjlab/tasks/cfg/: wf_tron_env_cfg.py
tron1-rl-mjlab/tasks/mdp/: commands.py
