[project]
name = "tron1-rl-mjlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mjlab>=1.2.0",
    "rsl-rl-lib",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "rsl_rl",
]

[tool.uv.sources]
rsl-rl-lib = { workspace = true }

[project.entry-points."mjlab.tasks"]
tron1_rl_mjlab = "tron1_rl_mjlab"
